maildev_docker/maildev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: maildev
  labels:
    app: maildev
    project: maildev
spec:
  selector:
    matchLabels:
      app: maildev
  replicas: 1
  template:
    metadata:
      labels:
        project: maildev
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev:latest
          ports:
            - name: http
              containerPort: 80
            - name: smtp
              containerPort: 25
          resources:
            requests:
              cpu: 10m
              memory: 120Mi
            limits:
              memory: 120Mi
              cpu: 20m
---
apiVersion: v1
kind: Service
metadata:
  name: maildev-http
  namespace: maildev
  labels:
    project: maildev
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    project: maildev
    app: maildev
---
apiVersion: v1
kind: Service
metadata:
  name: maildev-smtp
  namespace: maildev
  labels:
    project: maildev
spec:
  ports:
    - port: 25
      targetPort: 25
  selector:
    project: maildev
    app: maildev
---
